force-app/main/default/objects/CHANNEL_ORDERS__Customer__c/fields/CHANNEL_ORDERS__Customer_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Customer_Account_Id__c</fullName>
    <label>Customer Account Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>