force-app/main/default/objects/CHANNEL_ORDERS__Customer__c/fields/CHANNEL_ORDERS__Customer_City__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Customer_City__c</fullName>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>