force-app/main/default/objects/CHANNEL_ORDERS__Customer__c/fields/CHANNEL_ORDERS__Customer_Country__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Customer_Country__c</fullName>
    <label>Country</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>