force-app/main/default/objects/CHANNEL_ORDERS__Customer__c/fields/CHANNEL_ORDERS__Customer_State__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Customer_State__c</fullName>
    <label>State/Province/Region</label>
    <length>80</length>
    <type>Text</type>
</CustomField>