force-app/main/default/objects/CHANNEL_ORDERS__Customer__c/fields/CHANNEL_ORDERS__Customer_Street__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Customer_Street__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>