force-app/main/default/objects/CHANNEL_ORDERS__Customer__c/fields/CHANNEL_ORDERS__Customer_ZIP_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Customer_ZIP_Postal_Code__c</fullName>
    <label>ZIP/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>