force-app/main/default/objects/CHANNEL_ORDERS__Customer__c/fields/CHANNEL_ORDERS__Number_of_Orders__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Number_of_Orders__c</fullName>
    <label>Number of Orders (Deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>