force-app/main/default/objects/CHANNEL_ORDERS__Customer__c/fields/CHANNEL_ORDERS__OEM_Contract__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__OEM_Contract__c</fullName>
    <description>The OEM contracts for this Customer.</description>
    <inlineHelpText>The OEM contracts for this Customer.</inlineHelpText>
    <label>OEM Contract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>