force-app/main/default/objects/CHANNEL_ORDERS__Customer__c/fields/CHANNEL_ORDERS__Status__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Status__c</fullName>
    <formula>IF( ( CHANNEL_ORDERS__Renewal_Date__c - TODAY() ) &lt;=  45  &amp;&amp; ( ( CHANNEL_ORDERS__Renewal_Date__c - TODAY() ) &gt; 0 ),  IMAGE(&quot;/resource/CHANNEL_ORDERS__uilib/images/warning_60_yellow.png&quot;, &quot;warning&quot;, 16, 16) &amp;  &apos; Ends in &apos; &amp; TEXT( CHANNEL_ORDERS__Renewal_Date__c - TODAY()) 
&amp; &apos; Days&apos;,  null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>