force-app/main/default/objects/CHANNEL_ORDERS__Customer__c/validationRules/CHANNEL_ORDERS__Country_2_letter_code.validationRule-meta.xml
<ValidationRule>
    <fullName>CHANNEL_ORDERS__Country_2_letter_code</fullName>
    <active>true</active>
    <description>Deprecated</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>CHANNEL_ORDERS__Customer_Country__c</errorDisplayField>
    <errorMessage>(deprecated)</errorMessage>
</ValidationRule>