force-app/main/default/objects/CHANNEL_ORDERS__Customer__c/validationRules/CHANNEL_ORDERS__Invalid_OrgID.validationRule-meta.xml
<ValidationRule>
    <fullName>CHANNEL_ORDERS__Invalid_OrgID</fullName>
    <active>true</active>
    <description>Deprecated</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>CHANNEL_ORDERS__Customer_Org_ID__c</errorDisplayField>
    <errorMessage>(deprecated)</errorMessage>
</ValidationRule>