force-app/main/default/objects/CHANNEL_ORDERS__Customer__c/validationRules/CHANNEL_ORDERS__Valid_US_State.validationRule-meta.xml
<ValidationRule>
    <fullName>CHANNEL_ORDERS__Valid_US_State</fullName>
    <active>true</active>
    <description>Deprecated</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>CHANNEL_ORDERS__Customer_State__c</errorDisplayField>
    <errorMessage>(deprecated)</errorMessage>
</ValidationRule>