force-app/main/default/objects/CHANNEL_ORDERS__Customer__c/listViews/CHANNEL_ORDERS__COA_Customer_View.listView-meta.xml
<ListView>
    <fullName>CHANNEL_ORDERS__COA_Customer_View</fullName>
    <columns>NAME</columns>
    <columns>CHANNEL_ORDERS__Account__c</columns>
    <columns>CHANNEL_ORDERS__Customer_Org_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>COA Customer View</label>
    <language>en_US</language>
</ListView>